# stock-behavior

./: .env.example  CLAUDE.md  Dockerfile  Makefile  Project.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml  test.yml
backend/: config.py  dependencies.py  main.py  schemas.py
backend/database/: models.py
backend/database/migrations/: env.py
backend/database/repositories/: __init__.py  base.py  company.py  note.py  stock_price.py  user.py
backend/gateways/: storage.py
backend/routers/: analysis.py  auth.py  dev.py  notes.py  stocks.py  users.py
backend/scripts/: seed.py
backend/services/: ai_analysis.py  auth.py  scheduler.py  stock_ingestion.py
backend/tests/: conftest.py  factories.py
backend/tests/repositories/: test_company_repository.py  test_note_repository.py  test_stock_price_repository.py
backend/tests/routes/: test_analysis.py  test_notes.py  test_stocks.py
backend/tests/services/: test_stock_ingestion.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  verify_ai_panel.mjs  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: main.scss
frontend/src/components/: AiAssistantPanel.tsx  ChartPanel.tsx  Header.tsx  StockTable.tsx
frontend/src/router/: index.tsx
frontend/src/services/: analysis.ts  notes.ts
frontend/src/stores/: auth.ts  toast.ts
frontend/src/types/: stocks.ts
frontend/src/views/: HomeView.tsx  LoginView.tsx
(+4 files in other folders)
