[project]
name = "stock-behavior"
version = "0.1.0"
description = "S&P 500 stock behavior explorer with AI-assisted analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.12",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.12.1",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/database/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.hatch.build.targets.wheel]
packages = ["backend"]
